$Id: NEWS,v 1.1047 2009-07-21 15:47:54 castaglia Exp $

-----------------------------------------------------------------------------
  More details on the bugs listed below can be found by using the bug number
  indicated in the following URL:

    http://bugs.proftpd.org/show_bug.cgi?id=N

  where `N' is the bug number.
-----------------------------------------------------------------------------

CVS
--------------------------------
- Bug 3263 - Supplying option SFTPRekey timeout parameter causes segmentation
  fault.
- Bug 3265 - SFTP requests are logged to ExtendedLog without regard to classes.
- Bug 2758 - ProFTPD doesn't always pay attention to AccessDenyMsg.
- Bug 3266 - Support "implicit" FTPS.
- Bug 2070 - AuthAliasOnly off in <Global> section kills anonymous logins.
- Bug 3268 - Files whose names start with whitespace are not listed properly.
- Bug 1908 - ExtendedLog to work properly in <Anonymous> context.

1.3.3rc1 - Released 30-Jun-2009
--------------------------------
- Bug 1801 - Faulty SQLConnectInfo PERCALL policy - connections not closed
  after each call.
- Bug 2894 - Deprecate the AnonymousGroup directive.
- Bug 3123 - Use PQescapeStringConn() rather than PQescapeString().
- Bug 3133 - mod_facts should advertise TVFS support in the FEAT response.
- Bug 3128 - mod_sql_sqlite should use transactions for INSERT/UPDATE
  statements.
- Bug 3155 - Change the IdentLookups default to 'off'.  The RFC1413 IDENT
  lookup adds latency to the login process, so much so that it is a FAQ
  to configure "IdentLookups off".  In addition, the IDENT protocol is not
  secure; it can easily be spoofed using man-in-the-middle attacks.  Sites
  that require IDENT lookups must now explicitly configure "IdentLookups on".
- Bug 3156 - Allow resumed downloads when HiddenStore is in effect.
- Bug 3170 - RewriteMap unescape URL encoding broken by RewriteCondition
  backreference handling.
- Bug 2728 - Support for variables in ServerIdent directive.  The %L, %V,